--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 # Logs
 logs
+demo
+.idea
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
-
+.idea
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
